<resources>
    <string name="app_name">芭乐健康</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_error">出错啦</string>
    <string name="error_network">网络错误，请重试</string>
    <string name="dialog_close">关闭</string>
    <string name="note_exit">再按一次后退键退出程序</string>
    <string name="tab_shoye">首页</string>
    <string name="tab_shequ">社区</string>
    <string name="tab_health">健康</string>
    <string name="tab_fuwu">服务</string>
    <string name="tab_personal">我的</string>
    <string name="welcome_bottom">\@\ all right recoverd</string>
    <string name="welcome_middle">\"芭\"握现在，乐在健康</string>
    <string name="welcome_lable">健康宝互联网技术有限公司</string>
    <string name="pullup_to_load">上拉加载</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="bp_input">血压录入</string>
    <string name="history">历史</string>
    <string name="record_date">记录日期</string>
    <string name="reccord_time">记录时间</string>
    <string name="save">保存</string>

    <!-- XListView-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!--照片选择-->
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>

    <string name="network_anomalies">Network is not available, please check the network!</string>
    <string name="User_already_exists">User already existed!</string>
    <string name="registration_failed_without_permission">Registration failed, without permission!</string>
    <string name="Registration_failed">Registration failed</string>
    <string name="illegal_user_name">Illegal user name</string>

    <!-- shasresdk-->
    <string name="share">芭乐健康</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="agreement">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一切移动客户端用户在下载并浏览芭乐健康APP软件时均被视为已经仔细阅读本条款并完全同意。凡以任何方式登陆本APP，或直接、间接使用本APP资料者，均被视为自愿接受本网站相关声明和用户服务协议的约束。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芭乐健康APP转载的内容并不代表芭乐健康APP之意见及观点，也不意味着本网赞同其观点或证实其内容的真实性。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芭乐健康APP转载的文字、图片、音视频等资料均由第三方提供，其真实性、准确性和合法性由信息发布人负责。芭乐健康APP不提供任何保证，并不承担任何法律责任。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芭乐健康APP所转载的文字、图片、音视频等资料，如果侵犯了第三方的知识产权或其他权利，责任由作者或转载者本人承担，本APP对此不承担责任。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芭乐健康APP不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该外部链接指向的不由芭乐健康APP实际控制的任何网页上的内容，芭乐健康APP不承担任何责任。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用户明确并同意其使用芭乐健康APP网络服务所存在的风险将完全由其本人承担;因其使用芭乐健康APP网络服务而产生的一切后果也由其本人承担，芭乐健康APP对此不承担任何责任。\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 除芭乐健康APP注明之服务条款外，其它因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的任何损失，芭乐健康APP概不负责，亦不承担任何法律责任。\n
    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;对于因不可抗力或因黑客攻击、通讯线路中断等芭乐健康APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用芭乐健康APP，芭乐健康APP不承担任何责任，但将尽力减少因此给用户造成的损失或影响。\n
   &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。\n
   &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本网站相关声明版权及其修改权、更新权和最终解释权均属芭乐健康APP所有。</string>
</resources>
