<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jkb.enjoyor.healthhouse.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/bl_logo"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginTop="50px"
            android:textSize="36px"
            android:gravity="center"
            android:text="@string/welcome_middle"
            android:textColor="@color/textcolot_welcome" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="75px"
            android:gravity="center"
            android:text="@string/welcome_lable"
            android:textColor="@color/textcolor_body"
            android:textSize="@dimen/textsize_largetittle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30px"
            android:layout_marginTop="30px"
            android:gravity="center"
            android:text="@string/welcome_bottom"
            android:textColor="@color/textcolor_body"
            android:textSize="@dimen/textsize_largetittle">

        </TextView>
    </RelativeLayout>


</LinearLayout>
